--- a/selectcourse/templates/CourseSelectionPage.html
+++ b/selectcourse/templates/CourseSelectionPage.html
@@ -129,7 +129,7 @@ function loadcourseselectbox()
 <table width="100%" border="0">
   <tbody>
     <tr>
-      <th colspan="3" align="left" bgcolor="#06993C" scope="col"><img src="./images/Course.PNG" width="41" height="35" alt=""/><span style="font-size: 24px; color: #FFFFFF;">Course Selection</span></th>
+      <th colspan="3" align="left" bgcolor="#06993C" scope="col"><img src="/static/images/Course.PNG" width="41" height="35" alt=""/><span style="font-size: 24px; color: #FFFFFF;">Course Selection</span></th>
     </tr>
     <tr>
       <td width="0" bgcolor="#06993C">&nbsp;</td>
