--- a/selectcourse/templates/TermPage.html
+++ b/selectcourse/templates/TermPage.html
@@ -37,7 +37,7 @@
 <table width="100%" border="0">
   <tbody>
     <tr>
-      <th colspan="3" align="left" valign="top" bgcolor="#06993C" scope="col"><img src="../../../PycharmProjects/rollcall/Static/images/term1.png" width="44" height="42" alt=""/>&nbsp;<span style="font-size: 24px; color: #FCFCFC;">Term </span></th>
+      <th colspan="3" align="left" valign="top" bgcolor="#06993C" scope="col"><img src="/static/images/term1.png" width="44" height="42" alt=""/>&nbsp;<span style="font-size: 24px; color: #FCFCFC;">Term </span></th>
     </tr>
     <tr>
       <td width="0" bgcolor="#06993C">&nbsp;</td>
