--- a/selectcourse/templates/CourseSelectionPage.html
+++ b/selectcourse/templates/CourseSelectionPage.html
@@ -146,7 +146,7 @@ function loadcourseselectbox()
          <select name="select" class="inputbox1" id="course">
         <option value="0">Pls select a course</option>
     </select>
-        <input type="button" name="button" id="button" value="Select" onclick="loadresults()">
+        <input type="button" name="button" id="button" value="Select" onclick="loadresults(termid);">
         <table width="100%" border="1" cellpadding="0" cellspacing="0">
         <tbody>
           <tr>
@@ -157,7 +157,6 @@ function loadcourseselectbox()
                   <td width="35%" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course&nbsp;&nbsp;</strong></td>
                   <td width="10%" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course&nbsp;Start Date</strong></td>
                   <td width="10%" height="21" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course End Date&nbsp;&nbsp;</strong></td>
-                  <td width="15%" align="center" bgcolor="#DEE0DF" ><strong>Details</strong></td>
                   <td width="15%" height="21" align="center" bgcolor="#DEE0DF" ><strong>&nbsp;Management</strong>&nbsp;</td>
                 </tr>
                 <tr>
@@ -168,7 +167,6 @@ function loadcourseselectbox()
                     <input type="text" name="textfield" id="txtStartDate1" style="display: none" value="01/01/2020"></td>
                   <td height="21" align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblEndDate1">05/08/2020</label>
                     <input type="text" name="textfield" id="txtEndDate1" style="display: none" value="05/08/2020"></td>
-                  <td align="center" valign="middle" bgcolor="#FFFFFF"><a href="History.html">Attendance Details</a></td>
                   <td height="21" align="center" valign="middle" bgcolor="#FFFFFF">
 					<input type="button" name="button2" id="btnEdit1" value="Edit" onClick="edit(1);">
 					<input type="button" name="button4" id="btnUpdate1" value="Update" style="display: none" onClick="update(1);"> 
@@ -182,7 +180,6 @@ function loadcourseselectbox()
                     <input type="text" name="textfield" id="txtStartDate2" style="display: none" value="06/01/2020" ></td>
                   <td height="21" align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblEndDate2">08/23/2020</label>
                     <input type="text" name="textfield" id="txtEndDate2" style="display: none" value="08/23/2020"></td>
-                  <td align="center" valign="middle" bgcolor="#FFFFFF"><a href="History.html">Attendance Details</a></td>
                   <td height="21" align="center" valign="middle" bgcolor="#FFFFFF">
 					<input type="button" name="button2" id="btnEdit2" value="Edit" onClick="edit(2);">
 					<input type="button" name="button4" id="btnUpdate2" value="Update" style="display: none" onClick="update(2);"> 
