--- a/usermgnt/templates/RollCall.html
+++ b/usermgnt/templates/RollCall.html
@@ -6,14 +6,20 @@
 <meta charset="UTF-8">
 <title>RollCallPage</title>
 </head>
-
+	<script language="javascript">
+        function goframe(url)
+			{
+				var iframes=document.getElementById("myframe");
+				iframes.src=url;
+			}
+</script>
 <body>
-<table width="100%" border="5" cellpadding="0" cellspacing="0" bordercolor="#06993C">
+<table width="100%" border="5" cellpadding="0" cellspacing="0" bordercolor="#06993c">
   <tbody>
 	    <tr>
 	      <th width="45%" height="111" align="left" valign="middle" bgcolor="#06993C" scope="col"> <label for="textfield3" style="align-content: center" title="Roll Call System" >&nbsp;<img src="/static/images/roll_call.png" width="450" height="98" alt=""/></label></th>
 	      <th align="right" valign="middle" bgcolor="#06993C" scope="col" hei>
-	        <p><a href="{% static 'CoursePage.html' %}" target="myframe"><img src="/static/images/Course.PNG" alt="" width="72" height="68" border="0"/></a><img src="/static/images/Untitled.png" width="13" height="71" alt=""/><a href="{% static 'TermPage.html'%}" target="myframe"><img src="/static/images/Term.PNG" width="72" height="68" alt=""/></a><img src="/static/images/Untitled.png" width="13" height="66" alt=""/><a href="{% static 'CourseSelectionPage.html'%}" target="myframe"><img src="/static/images/Select.PNG" width="72" height="68" alt=""/></a><img src="/static/images/Untitled.png" width="12" height="72" alt=""/><a href="{% static 'RollCallPage.html'%}" target="myframe"><img src="/static/images/Rollcall.PNG" width="72" height="68" alt=""/></a><img src="/static/images/Untitled.png" width="14" height="70" alt=""/><a href="{% static 'StudentAppeals.html'%}" target="myframe"><img src="/static/images/Attendance 4.jpeg" width="62" height="67" alt=""/></a><img src="/static/images/Untitled.png" width="14" height="70" alt=""/><a href="{% static 'AdminLoginPage.html'%}"><img src="/static/images/exit.jpg" width="72" height="68"alt=""/></a>
+	        <p><img src="/static/images/Course.PNG" alt="" width="72" height="68" border="0" style="cursor: pointer" onClick="goframe('sc:course');"/><img src="/static/images/Untitled.png" width="13" height="71" alt=""/><a href='/sc/course' target="mainiframes"><img src="/static/images/Term.PNG" width="72" height="68" alt=""/></a><img src="/static/images/Untitled.png" width="13" height="66" alt=""/><a href="{% static 'CourseSelectionPage.html'%}" target="myframe"><img src="/static/images/Select.PNG" width="72" height="68" alt=""/></a><img src="/static/images/Untitled.png" width="12" height="72" alt=""/><a href="{% static 'RollCallPage.html'%}" target="myframe"><img src="/static/images/Rollcall.PNG" width="72" height="68" alt=""/></a><img src="/static/images/Untitled.png" width="14" height="70" alt=""/><a href="{% static 'StudentAppeals.html'%}" target="myframe"><img src="/static/images/Attendance 4.jpeg" width="62" height="67" alt=""/></a><img src="/static/images/Untitled.png" width="14" height="70" alt=""/><a href="{% static 'AdminLoginPage.html'%}"><img src="/static/images/exit.jpg" width="72" height="68"alt=""/></a>
           <p>&nbsp;</p></th>
         </tr>
       </tbody>
@@ -28,7 +34,7 @@
 <table width="100%" border="0">
   <tbody>
     <tr>
-      <td width="100%" ><iframe frameborder="0" height="500" width="100%" name="myframe"></iframe>&nbsp;</td>
+      <td width="100%" ><iframe frameborder="0" height="500" width="100%" name="myframe" id="myframe" src="RollCall.html"></iframe>&nbsp;</td>
     </tr>
   </tbody>
 </table>
