--- a/usermgnt/templates/RollCall.html
+++ b/usermgnt/templates/RollCall.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 
 <!doctype html>
@@ -18,11 +19,22 @@
   <tbody>
 	    <tr>
 	      <th width="45%" height="111" align="left" valign="middle" bgcolor="#06993C" scope="col"> <label for="textfield3" style="align-content: center" title="Roll Call System" >&nbsp;<img src="/static/images/roll_call.png" width="450" height="98" alt=""/></label></th>
-	      <th align="right" valign="middle" bgcolor="#06993C" scope="col" hei>
-	        <p><img src="/static/images/Course.PNG" alt="" width="72" height="68" border="0" style="cursor: pointer" onClick="goframe('sc:course');"/><img src="/static/images/Untitled.png" width="13" height="71" alt=""/><a href='/sc/course' target="mainiframes"><img src="/static/images/Term.PNG" width="72" height="68" alt=""/></a><img src="/static/images/Untitled.png" width="13" height="66" alt=""/><a href="{% static 'CourseSelectionPage.html'%}" target="myframe"><img src="/static/images/Select.PNG" width="72" height="68" alt=""/></a><img src="/static/images/Untitled.png" width="12" height="72" alt=""/><a href="{% static 'RollCallPage.html'%}" target="myframe"><img src="/static/images/Rollcall.PNG" width="72" height="68" alt=""/></a><img src="/static/images/Untitled.png" width="14" height="70" alt=""/><a href="{% static 'StudentAppeals.html'%}" target="myframe"><img src="/static/images/Attendance 4.jpeg" width="62" height="67" alt=""/></a><img src="/static/images/Untitled.png" width="14" height="70" alt=""/><a href="{% static 'AdminLoginPage.html'%}"><img src="/static/images/exit.jpg" width="72" height="68"alt=""/></a>
-          <p>&nbsp;</p></th>
+	      <th align="right" valign="middle" bgcolor="#06993C" scope="col">
+	        <p><img src="/static/images/Course.PNG" alt="" width="72" height="68" border="0" style="cursor:pointer;" onClick="goframe('/sc/course');"/>
+                <img src="/static/images/Untitled.png" width="13" height="71" alt=""/>
+                <img src="/static/images/Term.PNG" width="72" height="68" alt="" border="0" style="cursor:pointer;" onClick="goframe('/sc/term');"/></a>
+                <img src="/static/images/Untitled.png" width="13" height="66" alt=""/>
+                    <img src="/static/images/Select.PNG" width="72" height="68" alt="" border="0" style="cursor:pointer;" onClick="goframe('/sc/selectcourse');"/></a>
+                <img src="/static/images/Untitled.png" width="12" height="72" alt=""/>
+                <a href="{% static 'RollCallPage.html'%}" target="myframe"><img src="/static/images/Rollcall.PNG" width="72" height="68" alt=""/></a>
+                <img src="/static/images/Untitled.png" width="14" height="70" alt=""/>
+                <a href="{% static 'StudentAppeals.html'%}" target="myframe">
+                    <img src="/static/images/Attendance 4.jpeg" width="62" height="67" alt=""/></a>
+                <img src="/static/images/Untitled.png" width="14" height="70" alt=""/>
+                <a href="{% static 'AdminLoginPage.html'%}"><img src="/static/images/exit.jpg" width="72" height="68"alt=""/></a>
+          </p></th>
         </tr>
-      </tbody>
+      </tbody>'
 </table>
 <table width="100%" height="33" border="0">
   <tbody>
@@ -34,7 +46,7 @@
 <table width="100%" border="0">
   <tbody>
     <tr>
-      <td width="100%" ><iframe frameborder="0" height="500" width="100%" name="myframe" id="myframe" src="RollCall.html"></iframe>&nbsp;</td>
+      <td width="100%" ><iframe frameborder="0" height="500" width="100%" name="myframe" id="myframe" src="../RollCall.html" scrolling="auto"></iframe>&nbsp;</td>
     </tr>
   </tbody>
 </table>
