--- a/usermgnt/templates/StudentLoginPage.html
+++ b/usermgnt/templates/StudentLoginPage.html
@@ -22,7 +22,7 @@
 		</p>
 	<p>
 		  <label for="password">Password:</label>
-          <input type="password" name="userpwd" required="required" id="userpwd">
+          <input type="password" name="password" required="required" id="password">
 </p>
           <input name="submit" type="submit" id="submit" formmethod="POST" value="Submit" align="center">
 				</p></form>
