--- a/selectcourse/templates/TermPage.html
+++ b/selectcourse/templates/TermPage.html
@@ -5,6 +5,10 @@
 <title>TermPage</title>
 </head>
 <script language="javascript">
+    function check()
+    {
+        alert (" Warning: The term already exists");
+    }
 	function edit(i)
 		{
 			document.getElementById("lblTerm".concat(i)).style.display='none';
@@ -51,7 +55,7 @@
                 <tr>
                   <th width="45%" height="19" align="right" valign="middle" bgcolor="#A1A6A3" scope="col">Term:&nbsp;
                     <input name="termname" type="text" class="inputbox1" id="termname">
-                    <input name="button" type="submit" class="btn" id="button" value="Submit"></th>
+                    <input name="button" type="submit" class="btn" id="button" value="Submit" onclick="check()"></th>
 </tr>
                   </form>
               </tbody>
