--- a/usermgnt/templates/RollCall.html
+++ b/usermgnt/templates/RollCall.html
@@ -26,20 +26,22 @@
                 <img src="/static/images/Untitled.png" width="13" height="66" alt=""/>
                     <img src="/static/images/Select.PNG" width="72" height="68" alt="" border="0" style="cursor:pointer;" onClick="goframe('/sc/selectcourse');"/></a>
                 <img src="/static/images/Untitled.png" width="12" height="72" alt=""/>
-                <a href="{% static 'RollCallPage.html'%}" target="myframe"><img src="/static/images/Rollcall.PNG" width="72" height="68" alt=""/></a>
+                <img src="/static/images/Rollcall.PNG" width="72" height="68" alt=""  style="cursor:pointer;" onClick="goframe('/rollcallmodule/RollCallPage');"/></a>
                 <img src="/static/images/Untitled.png" width="14" height="70" alt=""/>
-                <a href="{% static 'StudentAppeals.html'%}" target="myframe">
-                    <img src="/static/images/Attendance 4.jpeg" width="62" height="67" alt=""/></a>
-                <img src="/static/images/Untitled.png" width="14" height="70" alt=""/>
-                <a href="{% static 'AdminLoginPage.html'%}"><img src="/static/images/exit.jpg" width="72" height="68"alt=""/></a>
           </p></th>
         </tr>
       </tbody>'
 </table>
-<table width="100%" height="33" border="0">
+<table width="100%" height="62" border="0">
   <tbody>
-    <tr>
-      <th height="29" align="left" bgcolor="#1E7F31" style="font-size: 28px; color: #FFFFFF;" scope="col" border="0" cellpadding="0" cellspacing="0"> Welcome</th>
+    <tr valign="middle">
+      <th width="47%" height="45%" bgcolor="#1E7F31" style="font-size: 28px; color: #FFFFFF;" scope="col" border="0" cellpadding="0" align="left" cellspacing="0"> Welcome</th>
+      <th width="53%" align="right" bgcolor="#1E7F31" style="font-size: 28px; color: #FFFFFF;" scope="col" border="0" cellpadding="0" cellspacing="0">
+          <form action="/usermgnt/admin/logout" method="POST">
+          {% csrf_token %}
+			<input type="submit" name="submit" id="submit" value="Log out">&nbsp;
+      </form>
+      </th>
     </tr>
   </tbody>
 </table>
