Added upload student details functionality

--- a/rollcallmodule/templates/RollCallPage.html
+++ b/rollcallmodule/templates/RollCallPage.html
@@ -93,7 +93,7 @@
 <div class="modal-content">
     <span class="close">&times;</span>
 	<div id="frameholder">
-		<iframe width="100%" height="300px" frameborder="0" src="coursepopup.html" name="full_info">
+		<iframe width="100%" height="300px" frameborder="0" src="coursepopup" name="full_info">
 		</iframe>
 	</div>
   </div>
@@ -104,7 +104,7 @@
 <div class="modal-content">
     <span class="close1">&times;</span>
 	<div id="frameholder">
-		<iframe width="100%" height="300px" frameborder="0" scrolling="yes" src="./UploadStudentInformationPage.html" name="full_info">
+		<iframe width="100%" height="300px" frameborder="0" scrolling="yes" src="StudentInformation" name="full_info">
 		</iframe>
 	</div>
   </div>
@@ -114,7 +114,7 @@
 <div class="modal-content">
     <span class="close2">&times;</span>
 	<div id="frameholder">
-		<iframe width="100%" height="300px" frameborder="0" src="./UploadClassStudentPhotoPage.html" name="full_info">
+		<iframe width="100%" height="300px" frameborder="0" src="UploadClassStudentPhoto" name="full_info">
 		</iframe>
 	</div>
   </div>
@@ -124,7 +124,7 @@
 <div class="modal-content">
     <span class="close3">&times;</span>
 	<div id="frameholder">
-		<iframe width="100%" height="300px" frameborder="0" scrolling="yes" src="./History.html" name="full_info">
+		<iframe width="100%" height="300px" frameborder="0" scrolling="yes" src="History" name="full_info">
 		</iframe>
 	</div>
   </div>
