--- a/usermgnt/templates/RollCall.html
+++ b/usermgnt/templates/RollCall.html
@@ -48,7 +48,7 @@
 <table width="100%" border="0">
   <tbody>
     <tr>
-      <td width="100%" ><iframe frameborder="0" height="500" width="100%" name="myframe" id="myframe" src="../RollCall.html" scrolling="auto"></iframe>&nbsp;</td>
+      <td width="100%" ><iframe frameborder="0" height="500" width="100%" name="myframe" id="myframe" src="/sc/course" scrolling="auto"></iframe>&nbsp;</td>
     </tr>
   </tbody>
 </table>
