--- a/rollcallmodule/templates/ExtractingComparing.html
+++ b/rollcallmodule/templates/ExtractingComparing.html
@@ -41,7 +41,7 @@
               <tr align="center">
                 <td>{{ attd.studetails.stunum }}</td>
                 <td>{{ attd.studetails.stuname }}</td>
-                <td><img src="/rollcallmodule/StudentImages/{{attd.studetails.stunum}}.jpg" width="52" height="41" alt=""/></td>
+                <td><img src="/static/StudentImages/{{attd.studetails.stunum}}.jpg" width="52" height="41" onerror="this.onerror=null;this.src='/static/images/NoPhoto.jpg'"/></td>
                 <td>{% if attd.matchrate == null or att.matchrate == ""%}
                     0%
                     {% else %}
@@ -55,132 +55,6 @@
                 </td>
               </tr>
           {% endfor %}
-          <tr>
-            <td height="44" align="center">&nbsp;2020A001</td>
-            <td align="center">&nbsp;Willem Baxter</td>
-            <td align="center"><img src="/static/images/images/Willem Baxter.jpg" width="52" height="41" alt=""/></td>
-            <td align="center">50%</td>
-            <td align="center"><img src="/static/images/images/exit.jpg" width="32" height="25" alt=""/></td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;2020A002</td>
-            <td align="center">&nbsp;Samantha Chu</td>
-            <td align="center"><img src="/static/images/Samantha Chu.jpg" width="52" height="41" alt=""/></td>
-            <td align="center">65%</td>
-            <td align="center"><img src="/static/images/checkmarck.jpg" width="25" height="24" alt=""/></td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
-          <tr>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            </tr>
         </tbody>
       </table></td>
       <td width="1%"bgcolor="#228744">&nbsp;</td>
