--- a/rollcallmodule/templates/UploadClassStudentPhotoPage.html
+++ b/rollcallmodule/templates/UploadClassStudentPhotoPage.html
@@ -88,7 +88,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   <div class="modal-content">
     <span class="close">&times;</span>
 	  	<div id="frameholder">
-		<iframe width="100%" height="300px" frameborder="0" src="ExtractingComparing.html" name="full_info">
+		<iframe width="100%" height="300px" frameborder="0" src="ExtractingComparing" name="full_info">
 		</iframe>
 	</div>
 
