--- a/rollcallmodule/templates/UploadStudentInformationPage.html
+++ b/rollcallmodule/templates/UploadStudentInformationPage.html
@@ -10,14 +10,19 @@
 
 </table>
 <p>
+<form method="post" action="/rollcallmodule/StudentInformation/importstu"  enctype="multipart/form-data">
+    {% csrf_token %}
   <label for="lname"><br>
     </label>Upload your file:</p>
+
   <p>
-    <input type="file" id="myFile" name="filename">
+    <input type="file" id="myFile" name="filename" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
   </p>
+<i>Supports only xls or xlsx file</i>
   <p>
-    <input type="submit" name="submit" id="submit" value="Submit" onClick="alert('Upload succesfull!');">    
+    <input type="submit" name="submit" id="submit" value="Submit" onClick="alert('Upload succesfull!');">
     <br><br>
+      </form>
   </p>
   <form action="MyAttendancePage.html" method="POST">
     <p></p>
