Added database relations

--- a/rollcallmodule/templates/RollCallPage.html
+++ b/rollcallmodule/templates/RollCallPage.html
@@ -81,7 +81,7 @@
 	<img  src="/static/images/Select.PNG" width="30" height="30" >
 	</button>  
 	<button id="myBtn1">
-	<img src=".//static/images/import_1.PNG" width="30" height="30" >
+	<img src="/static/images/import_1.PNG" width="30" height="30" >
 	</button>
 	<button id="myBtn2">
 	<img  src="/static/images/starticon.jpg" width="30" height="30" >
