--- a/rollcallmodule/templates/UploadStudentInformationPage.html
+++ b/rollcallmodule/templates/UploadStudentInformationPage.html
@@ -16,7 +16,7 @@
     </label>Upload your file:</p>
 
   <p>
-    <input type="file" id="myFile" name="filename" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
+    <input type="file" id="myFile" name="filename" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" multiple="multiple">
   </p>
 <i>Supports only xls or xlsx file</i>
   <p>
