--- a/rollcallmodule/templates/RollCallPage.html
+++ b/rollcallmodule/templates/RollCallPage.html
@@ -124,7 +124,7 @@
 <div class="modal-content">
     <span class="close3">&times;</span>
 	<div id="frameholder">
-		<iframe width="100%" height="300px" frameborder="0" scrolling="yes" src="History" name="full_info">
+		<iframe width="100%" height="300px" frameborder="0" scrolling="yes" src="history" name="full_info">
 		</iframe>
 	</div>
   </div>
